Fix primary button colours

--- a/html/app/themes/ctba-2016/less/styles/_button.less
+++ b/html/app/themes/ctba-2016/less/styles/_button.less
@@ -29,13 +29,13 @@
   }
 
 .btn--primary {
-  background: @brand--green; /* Old browsers */
-  background: -moz-linear-gradient(top, @brand--green 0%, @brand--green-dark 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,@brand--green), color-stop(100%,@brand--green-dark)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, @brand--green 0%,@brand--green-dark 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, @brand--green 0%,@brand--green-dark 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, @brand--green 0%,@brand--green-dark 100%); /* IE10+ */
-  background: linear-gradient(to bottom, @brand--green 0%,@brand--green-dark 100%); /* W3C */
+  background: @brand--gold; /* Old browsers */
+  background: -moz-linear-gradient(top, @brand--gold 0%, @brand--gold-dark 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, @brand--gold), color-stop(100%,@brand--gold-dark)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, @brand--gold 0%, @brand--gold-dark 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, @brand--gold 0%, @brand--gold-dark 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, @brand--gold 0%, @brand--gold-dark 100%); /* IE10+ */
+  background: linear-gradient(to bottom, @brand--gold 0%, @brand--gold-dark 100%); /* W3C */
 }
 
   .btn--primary:active,
