--- a/html/app/themes/ctba-2016/style.css
+++ b/html/app/themes/ctba-2016/style.css
@@ -1139,17 +1139,17 @@ aside .image {
 .btn--primary {
   background: #d6b148;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #d6b148 0%, #9abf1a 100%);
+  background: -moz-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d6b148), color-stop(100%, #9abf1a));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d6b148), color-stop(100%, #bc9c3f));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #d6b148 0%, #9abf1a 100%);
+  background: -webkit-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #d6b148 0%, #9abf1a 100%);
+  background: -o-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #d6b148 0%, #9abf1a 100%);
+  background: -ms-linear-gradient(top, #d6b148 0%, #bc9c3f 100%);
   /* IE10+ */
-  background: linear-gradient(to bottom, #d6b148 0%, #9abf1a 100%);
+  background: linear-gradient(to bottom, #d6b148 0%, #bc9c3f 100%);
   /* W3C */
 }
 .btn--primary:active,
