Add dashboard CSS

--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -38,6 +38,7 @@
 @import 'styles/_media.less';
 @import 'styles/_hero.less';
 @import 'styles/_sponsors.less';
+@import 'styles/_dashboard.less';
 @import 'styles/_button.less';
 @import 'styles/_block.less';
 @import 'styles/_list.less';
