--- a/html/app/themes/ctba-2016/less/styles/_alert.less
+++ b/html/app/themes/ctba-2016/less/styles/_alert.less
@@ -21,6 +21,18 @@
     letter-spacing: -0.5px;
   }
 
+	.alert--danger {
+		color: #a94442;
+		background-color: #f2dede;
+		border-color: #ebcccc;
+	}
+
+	.alert--warning {
+		color: #8a6d3b;
+		background-color: #fcf8e3;
+		border-color: #faf2cc;
+	}
+
 /* Position the close button */
 .alert__close {
   position: absolute;
