Add message on reaching category limit

--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -51,6 +51,6 @@
 
 //  Core
 //  Placed at the end as most of these classes will overwrite others.
-
+@import 'base/_core.less';
 @import '../bower_components/possession/base/_core.less';
 @import '../bower_components/possession/base/_print.less';
