--- a/html/app/themes/ctba-2016/less/styles/_alert.less
+++ b/html/app/themes/ctba-2016/less/styles/_alert.less
@@ -21,6 +21,12 @@
     letter-spacing: -0.5px;
   }
 
+	.alert--info {
+		color: #31708f;
+		background-color: #d9edf7;
+		border-color: #bcdff1;
+	}
+
 	.alert--danger {
 		color: #a94442;
 		background-color: #f2dede;
