--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -38,6 +38,7 @@
 @import 'styles/_media.less';
 @import 'styles/_hero.less';
 @import 'styles/_sponsors.less';
+@import 'styles/_nomination.less';
 @import 'styles/_dashboard.less';
 @import 'styles/_button.less';
 @import 'styles/_block.less';
@@ -50,6 +51,6 @@
 
 //  Core
 //  Placed at the end as most of these classes will overwrite others.
-
+@import 'base/_core.less';
 @import '../bower_components/possession/base/_core.less';
 @import '../bower_components/possession/base/_print.less';
