Nominate Styling to form and Dashboard

--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -48,6 +48,7 @@
 @import 'styles/_form.less';
 @import 'styles/_alert.less';
 @import 'styles/_grid.less';
+@import 'styles/_nominate.less';
 
 //  Core
 //  Placed at the end as most of these classes will overwrite others.
