--- a/html/app/themes/ctba-2016/less/styles/_grid.less
+++ b/html/app/themes/ctba-2016/less/styles/_grid.less
@@ -34,6 +34,8 @@ body {
   // Set our width limits to stop the design breaking at extreme sizes
   min-width: 300px;
   max-width: 1000px;
+  padding-right: 0.5em;
+    padding-left: 0.5em;
 }
 
 @media screen and (min-width: 764px){
