Styling and centering of partners logos and text

--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -49,6 +49,7 @@
 @import 'styles/_alert.less';
 @import 'styles/_grid.less';
 @import 'styles/_nominate.less';
+@import 'styles/_partners.less';
 
 //  Core
 //  Placed at the end as most of these classes will overwrite others.
