--- a/html/app/themes/ctba-2016/less/styles/_partners.less
+++ b/html/app/themes/ctba-2016/less/styles/_partners.less
@@ -2,20 +2,28 @@
  * Partners
  */
 
-.partners-item{
-    display: flex !important;
-    flex-direction: row;
+.block .block__aside {
+    float: none;
+    padding: 14.5px;
 }
 
+@media screen and (min-width:768px){
+    .partners-item{
+        display: flex !important;
+        flex-direction: row;
+    }
+    .partners-item__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .partners-item__aside {
+        float: left;
+        margin-bottom: 2em;
+    }
 
-
-.partners-item__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.partners-item__aside {
+    .block .block__aside {
     float: left;
-    margin-bottom: 2em;
 }
+}
+
