Add styling to `hr` element

--- a/html/app/themes/ctba-2016/less/styles/_typography.less
+++ b/html/app/themes/ctba-2016/less/styles/_typography.less
@@ -38,3 +38,10 @@ aside .gamma {
 a {
   font-weight: bold;
 }
+
+hr {
+	margin-bottom: 2em;
+	// Reset `hr` defaults
+	border: 0 solid @brand--grey;
+  border-bottom-width: 1px;
+}
