Register css added to global.css

--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -50,6 +50,7 @@
 @import 'styles/_grid.less';
 @import 'styles/_nominate.less';
 @import 'styles/_partners.less';
+@import 'styles/_register.less';
 
 //  Core
 //  Placed at the end as most of these classes will overwrite others.
