Adjust sizing of category pages

--- a/html/app/themes/ctba-2016/less/styles/_list.less
+++ b/html/app/themes/ctba-2016/less/styles/_list.less
@@ -36,6 +36,10 @@
     }
 
 
+.category-item__aside {
+	padding-top: 0;
+}
+
 @media screen and (min-width: 481px) {
 
   .categories__columns {
@@ -48,7 +52,7 @@
     padding-right: 14.5px;
     padding-left: 14.5px;
     width: 50%;
-    height: 72px;
+    height: auto;
     border-bottom: none;
   }
 
