--- a/html/app/themes/ctba-2016/less/styles/_hero.less
+++ b/html/app/themes/ctba-2016/less/styles/_hero.less
@@ -30,7 +30,13 @@
 
 .hero__content {
   position: absolute;
-  top: 2em;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   margin: 0 auto;
   width:100%;
   min-width: 300px;
@@ -43,21 +49,6 @@
   }
 }
 
-@media screen and ( min-width: 767px ){
-
-  .hero__content {
-    top: 3em;
-  }
-
-}
-
-@media screen and ( min-width: 850px ){
-
-  .hero__content {
-    top: 7em;
-  }
-
-}
 
 .hero--image {
   background-repeat: no-repeat;
