Fix positive alert border colour

--- a/html/app/themes/ctba-2016/less/styles/_alert.less
+++ b/html/app/themes/ctba-2016/less/styles/_alert.less
@@ -14,9 +14,9 @@
   }
 
   .alert--positive {
-    background: @brand--green;
-    border-color: @brand--green-dark;
-    font-family: @heading__font-family;
+    background: @brand--gold;
+    border-color: @brand--gold-dark;
+    font-family: @body__font-family;
     color: @brand--white;
     letter-spacing: -0.5px;
   }
