--- a/html/app/themes/ctba-2016/less/styles/_block.less
+++ b/html/app/themes/ctba-2016/less/styles/_block.less
@@ -63,6 +63,13 @@
   margin-right: 0;
 }
 
+@media screen and ( min-width: 768px ) {
+	.partners-item__aside {
+		width: 33.333%;
+		min-width: 33.333%;
+	}
+}
+
 //
 //  Shortlist
 //
