--- a/html/app/themes/ctba-2016/less/global.less
+++ b/html/app/themes/ctba-2016/less/global.less
@@ -1,3 +1,11 @@
+/*!
+ * Theme Name: CT Business Awards 2016
+ * Author: Trinity Mirror Creative
+ * Author URI: http://www.trinitymirror.com
+ * Description: Theme for the 2016 CT Business Awards events site
+ * Version: 1.1.0
+*/
+
 //  Base
 
 @import '_fonts.less';
